# Beam-ESP32

./: .gitignore  CMakeLists.txt  extra_script.py  platformio.ini
data/: index.htm  script.js
src/: nodeconfig.h  printerprocess.cpp  serverprocess.cpp  wifinode.cpp
